--- a/style.css
+++ b/style.css
@@ -1,61 +1,77 @@
-body {
+body{
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 17px;
-  line-height: 1.5;
+  font-size:17px;
+  line-height:1.6;
 }
 
-.button {
+.button{
   background: #222222;
-  padding: 1em 2em;
-  color: white;
-  border: 0;
+  padding:1em 2em;
+  color:#fff;
+  border:0;
 }
 
-.button:hover {
-  background: #333
+.button:hover{
+  background:#333;
 }
 
-.modal {
-  height: 100%;
-  width: 100%;
-  display: none;
+.modal{
+  display:none;
   position: fixed;
-  z-index: 1;
+  z-index:1;
   left: 0;
-  top: 0;
+  top:0;
+  height: 100%;
+  width:100%;
   overflow: auto;
-  background-color: rgba(0,0,0,0.5)
+  background-color: rgba(0,0,0,0.5);
 }
 
-.modal-content {
-  background-color: #222222;
-  color: white;
+.modal-content{
+  background-color:#222222;
   margin: 20% auto;
-  padding: 20px;
-  width: 70%;
-  box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7 20px 0 rgba(0,0,0,0.17);
-  animation-name: modalopen;
-  animation-duration: 1s;
+  width:70%;
+  color: white;
+  box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2),0 7px 20px 0 rgba(0,0,0,0.17);
+  animation-name:modalopen;
+  animation-duration:1s;
 }
 
-.closebtn {
-  color: #ccc;
+.modal-header h2, .modal-footer h3{
+  margin:0;
+}
+
+.modal-header{
+  background: #097274;
+  padding:15px;
+  color:#fff;
+}
+
+.modal-body{
+  padding:10px 20px;
+}
+
+.modal-footer{
+  background: #097274;
+  padding:10px;
+  color:#fff;
+  text-align: center;
+}
+
+.closeBtn{
+  color:#ccc;
   float: right;
-  font-size: 30px;
+  font-size:30px;
+  color:#fff;
 }
 
-.closebtn:hover,.closebtn:focus{
-  color: black;
+.closeBtn:hover,.closeBtn:focus{
+  color:#000;
   text-decoration: none;
-  cursor: pointer;
+  cursor:pointer;
 }
 
-
-@keyframes modalopen {
-  from{
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+@keyframes modalopen{
+  from{ opacity: 0}
+  to {opacity: 1}
 }
